# movie-ranking

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  lambda_handler.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
.claude/agents/: backend-engineer.md  backend-implementation.md  devops-platform-engineer.md  documentation-writer.md  frd-creator.md  frd-refiner.md  frd-task-breakdown.md  frontend-implementation.md  frontend-react-engineer.md  infrastructure-implementation.md  product-manager.md  qa-test-engineer.md  request-triage.md  security-review.md  tech-lead.md  test-coverage.md  ux-ui-designer.md  workflow-orchestrator.md
.claude/commands/: breakdown.md  frd.md  implement.md  refine.md  status.md  triage.md  workflow.md
.claude/plans/: 02-api-implementation.md
.claude/retros/: 2026-01-13-analytics-feature.md
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_rated_at.py  (+4 more)
app/: CLAUDE.md  __init__.py  config.py  database.py  dependencies.py  main.py
docs/: architecture.md  features.md  retro-2026-01-12-ranking-features.md
frontend/: .env.example  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
infra/: .gitignore  CLAUDE.md  package-lock.json  package.json
tests/: __init__.py  conftest.py  test_analytics.py  test_auth.py  test_csv_parser.py  test_google_auth.py  test_import_amazon.py  test_import_session.py  test_movies.py  test_rankings.py  test_tmdb_service.py
(+123 files in other folders)
